# smart-contracts

./: README.md
sc-minter-main/: Cargo.toml
sc-minter-main/meta/: Cargo.toml
sc-minter-main/src/: lib.rs
sc-minter-main/wasm/: Cargo.toml
sc-nft-staking/: Cargo.toml  build_test
sc-nft-staking/dev-scripts/: deploy.sh  upgrade.sh
sc-nft-staking/mandos/: stake-function.scen.json
sc-nft-staking/meta/: Cargo.toml
sc-nft-staking/meta/src/: main.rs
sc-nft-staking/scripts/: deploy.sh  upgrade.sh
sc-nft-staking/src/: ___empty copy.rs  empty.rs  nft_info.rs  wallet_info.rs
sc-nft-staking/tests/: empty_rust_test.rs  new.rs  stake_fn.rs
sc-nft-staking/wasm/: Cargo.toml
sc-nft-staking/wasm/src/: lib.rs
